--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
     <head>
-        <title></title>
+        <title><meta name="google-site-verification" content="dRln6NO7BueCYTyHGWSljiSNtZIi7kKFxV1lrcFI8uc"/></title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
