--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
 
     <head>
-        <title><meta name="google-site-verification" content="dRln6NO7BueCYTyHGWSljiSNtZIi7kKFxV1lrcFI8uc"/></title>
+        <meta name="google-site-verification" content="dRln6NO7BueCYTyHGWSljiSNtZIi7kKFxV1lrcFI8uc" />
+        <title> Home page</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
